--- a/c-simple-stl/CMakeLists.txt
+++ b/c-simple-stl/CMakeLists.txt
@@ -7,6 +7,6 @@ set(CMAKE_C_FLAGS "-Wall -g -O2")
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
 
 add_library(csstl STATIC
-    src/algorithm.c
     src/vector.c
+    src/list.c
 )
