--- a/c-simple-stl/CMakeLists.txt
+++ b/c-simple-stl/CMakeLists.txt
@@ -9,4 +9,5 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
 add_library(csstl STATIC
     src/vector.c
     src/list.c
+    src/list_element.c
 )
