--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,15 @@
 cmake_minimum_required(VERSION 2.8)
 
-add_subdirectory(c-simple-stl)
+project(c-simple-stl C)
+
+set(CMAKE_C_FLAGS "-Wall -g -O2")
+
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
+
+add_library(csstl STATIC
+    ./src/vector.c
+    ./src/list.c
+    ./src/list_element.c
+)
+
 add_subdirectory(test)
