Add stack container

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ after_script:
     - ./test/vector_test
     - ./test/list_test
     - ./test/queue_test
+    - ./test/stack_test
 
 notifications:
     email:
