--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,22 +1,20 @@
 cmake_minimum_required(VERSION 2.8)
 
-project(simple-container C)
+project(libscl C)
 
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -O2 -Wall -Wextra -std=gnu99 -pedantic")
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O2 -Wall -Wextra -pedantic -std=c99 -g")
 set(INSTALL_DIR ${CMAKE_CURRENT_SOURCE_DIR}/bin/)
 
 set(HEADER ./include/vector.h ./include/list.h ./include/queue.h ./include/stack.h ./include/ring_buffer.h)
 set(SOURCE ./src/vector.c ./src/list.c ./src/queue.c ./src/stack.c ./src/ring_buffer.c)
 
-set(TARGET_LIB simplecontainer)
-set(TARGET_LIB_STATIC ${TARGET_LIB}_static)
+set(TARGET_LIB scl)
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
 
-add_library(${TARGET_LIB} SHARED ${SOURCE})
-add_library(${TARGET_LIB_STATIC} STATIC ${SOURCE})
+add_library(${TARGET_LIB} STATIC ${SOURCE})
 
 install(FILES ${HEADER} DESTINATION ${INSTALL_DIR}/include)
-install(TARGETS ${TARGET_LIB} ${TARGET_LIB_STATIC} DESTINATION ${INSTALL_DIR}/lib)
+install(TARGETS ${TARGET_LIB} DESTINATION ${INSTALL_DIR}/lib)
 
 add_subdirectory(test)
