--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ compiler: gcc
 before_script:
     - mkdir build/
     - cd build/
-    - cmake ..
+    - cmake .. -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=../output/
 
 script:
     - make -j4
