update readme update cmake file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,15 +2,15 @@ cmake_minimum_required(VERSION 2.8)
 
 project(libscl C)
 
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O2 -Wall -Wextra -pedantic -std=c99 -g")
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O2 -Wall -Wextra -pedantic -std=c99")
 set(INSTALL_DIR ${CMAKE_INSTALL_PREFIX}/)
 
 if (NOT CMAKE_BUILD_TYPE)
-    set(CMAKE_BUILD_TYPE "Release")
+    set(CMAKE_BUILD_TYPE "Debug")
 else ()
     if (NOT CMAKE_BUILD_TYPE STREQUAL "Release")
         if (NOT CMAKE_BUILD_TYPE STREQUAL "Debug")
-            set(CMAKE_BUILD_TYPE "Release")
+            set(CMAKE_BUILD_TYPE "Debug")
         endif ()
     endif ()
 endif ()
@@ -31,7 +31,7 @@ add_library(${TARGET_LIB} STATIC ${SOURCE})
 install(FILES ${HEADER} DESTINATION ${INSTALL_DIR}/include)
 install(TARGETS ${TARGET_LIB} DESTINATION ${INSTALL_DIR}/lib)
 
-message("Build type is '${CMAKE_BUILD_TYPE}''.")
-message("The default install directory is '${INSTALL_DIR}'.")
+message("Build type: ${CMAKE_BUILD_TYPE}")
+message("Install dir: ${INSTALL_DIR}")
 
 add_subdirectory(test)
