--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,8 @@ script:
     - make -j4
 
 after_script:
-    - ./test/list_test
-    - ./test/vector_test
+    - ./tests/list_test
+    - ./tests/vector_test
 
 notifications:
     email:
