--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -9,13 +9,13 @@ set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O2 -Wall -Wextra -Wno-unused-parameter -ped
 add_executable(list_test list_test.c)
 target_link_libraries(list_test ${OUTPUT_LIB})
 
-add_executable(list_test_for_each list_test_for_each.c)
-target_link_libraries(list_test_for_each ${OUTPUT_LIB})
+add_executable(list_test_echo list_test_echo.c)
+target_link_libraries(list_test_echo ${OUTPUT_LIB})
 
 ### vector
 
 add_executable(vector_test vector_test.c)
 target_link_libraries(vector_test ${OUTPUT_LIB})
 
-add_executable(vector_test_for_each vector_test_for_each.c)
-target_link_libraries(vector_test_for_each ${OUTPUT_LIB})
+add_executable(vector_test_echo vector_test_echo.c)
+target_link_libraries(vector_test_echo ${OUTPUT_LIB})
