--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,2 +1,9 @@
-set(HEADER ${CMAKE_CURRENT_SOURCE_DIR}/list.h PARENT_SCOPE)
-set(SOURCE ${CMAKE_CURRENT_SOURCE_DIR}/list.c PARENT_SCOPE)
+set(HEADER
+    ${CMAKE_CURRENT_SOURCE_DIR}/list.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/vector.h
+    PARENT_SCOPE)
+
+set(SOURCE
+    ${CMAKE_CURRENT_SOURCE_DIR}/list.c
+    ${CMAKE_CURRENT_SOURCE_DIR}/vector.c
+    PARENT_SCOPE)
