--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -7,15 +7,15 @@ set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O2 -Wall -Wextra -Wno-unused-parameter -ped
 ### list
 
 add_executable(list_test list_test.c)
-target_link_libraries(list_test ${OUTPUT_LIB})
+target_link_libraries(list_test ${TARGET})
 
 add_executable(list_test_echo list_test_echo.c)
-target_link_libraries(list_test_echo ${OUTPUT_LIB})
+target_link_libraries(list_test_echo ${TARGET})
 
 ### vector
 
 add_executable(vector_test vector_test.c)
-target_link_libraries(vector_test ${OUTPUT_LIB})
+target_link_libraries(vector_test ${TARGET})
 
 add_executable(vector_test_echo vector_test_echo.c)
-target_link_libraries(vector_test_echo ${OUTPUT_LIB})
+target_link_libraries(vector_test_echo ${TARGET})
